# Atmp

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: data.db  data.txt
src/: .main.py.swp  database.py  main.py
